force-app/main/default/objects/Lead/fields/LeanData__Routing_Status__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Routing_Status__c</fullName>
    <label>LeanData Routing Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>