force-app/main/default/objects/Lead/fields/LeanData__Search__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Search__c</fullName>
    <description>LeanData search field</description>
    <label>LeanData Search (obsolete)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>