force-app/main/default/objects/Lead/fields/Letter_Salutation_2_Lead__c.field-meta.xml
<CustomField>
    <fullName>Letter_Salutation_2_Lead__c</fullName>
    <label>Letter Salutation 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>