force-app/main/default/objects/Lead/fields/Letter_Salutation_lead__c.field-meta.xml
<CustomField>
    <fullName>Letter_Salutation_lead__c</fullName>
    <label>Letter Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>