force-app/main/default/objects/Lead/fields/Lifecycle_Stage_Lead__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage_Lead__c</fullName>
    <description>RO-1654</description>
    <inlineHelpText>Synced from Hubspot</inlineHelpText>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lifecycle_Stage</valueSetName>
    </valueSet>
</CustomField>