force-app/main/default/objects/Lead/fields/Live_Event_Comments_lead__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Comments_lead__c</fullName>
    <label>Live Event Comments (Lead)</label>
    <length>27000</length>
    <type>LongTextArea</type>
</CustomField>