force-app/main/default/objects/Lead/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <inlineHelpText>Illustrates the lost reason of why a lead was lost. Is important to track for future improvements in lead sourcing</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jobseeker</fullName>
            </value>
            <value>
                <fullName>Currently no budget available</fullName>
            </value>
            <value>
                <fullName>Gave fake information</fullName>
            </value>
            <value>
                <fullName>Already existing customer</fullName>
            </value>
            <value>
                <fullName>Duplicated Lead</fullName>
            </value>
            <value>
                <fullName>Currently no focus jobs</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t respond</fullName>
            </value>
            <value>
                <fullName>Not active in HeyJobs&apos; service countries</fullName>
            </value>
            <value>
                <fullName>Admin Only: Lead merged in Hubspot</fullName>
            </value>
            <value>
                <fullName>Bankrupt</fullName>
                <isActive>false</isActive>
                <label>Bankrupt</label>
            </value>
            <value>
                <fullName>Bestandskunde</fullName>
                <isActive>false</isActive>
                <label>Bestandskunde</label>
            </value>
            <value>
                <fullName>Blacklist</fullName>
                <isActive>false</isActive>
                <label>Blacklist</label>
            </value>
            <value>
                <fullName>Change of contact person</fullName>
                <isActive>false</isActive>
                <label>Change of contact person</label>
            </value>
            <value>
                <fullName>Dealbreaker: ATS integration</fullName>
                <isActive>false</isActive>
                <label>Dealbreaker: ATS integration</label>
            </value>
            <value>
                <fullName>Decentral Leads</fullName>
                <isActive>false</isActive>
                <label>Decentral Leads</label>
            </value>
            <value>
                <fullName>Depending on parent company decision</fullName>
                <isActive>false</isActive>
                <label>Depending on parent company decision</label>
            </value>
            <value>
                <fullName>Do not contact again</fullName>
                <isActive>false</isActive>
                <label>Do not contact again</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
                <isActive>false</isActive>
                <label>Existing Customer</label>
            </value>
            <value>
                <fullName>Fake Information</fullName>
                <isActive>false</isActive>
                <label>Fake Information</label>
            </value>
            <value>
                <fullName>Happy with existing methods</fullName>
                <isActive>false</isActive>
                <label>Happy with existing methods</label>
            </value>
            <value>
                <fullName>Internal blocker</fullName>
                <isActive>false</isActive>
                <label>Internal blocker</label>
            </value>
            <value>
                <fullName>Lead Score C</fullName>
                <isActive>false</isActive>
                <label>Lead Score C</label>
            </value>
            <value>
                <fullName>No Budget at the moment</fullName>
                <isActive>false</isActive>
                <label>No Budget at the moment</label>
            </value>
            <value>
                <fullName>No Budget atm</fullName>
                <isActive>false</isActive>
                <label>No Budget atm</label>
            </value>
            <value>
                <fullName>No Focus Jobs atm</fullName>
                <isActive>false</isActive>
                <label>No Focus Jobs atm</label>
            </value>
            <value>
                <fullName>No Hiring Need atm</fullName>
                <isActive>false</isActive>
                <label>No Hiring Need atm</label>
            </value>
            <value>
                <fullName>No Interest</fullName>
                <isActive>false</isActive>
                <label>No Interest</label>
            </value>
            <value>
                <fullName>No Potential</fullName>
                <isActive>false</isActive>
                <label>No Potential</label>
            </value>
            <value>
                <fullName>No Response</fullName>
                <isActive>false</isActive>
                <label>No Response</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>