force-app/main/default/objects/Lead/fields/Marketing_Contact_until_next_update__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Contact_until_next_update__c</fullName>
    <label>Marketing Contact until next update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>