force-app/main/default/objects/Lead/fields/MQL_Context__c.field-meta.xml
<CustomField>
    <fullName>MQL_Context__c</fullName>
    <description>Consolidated view of all relevant MQL topics</description>
    <inlineHelpText>Consolidated view of all relevant MQL topics</inlineHelpText>
    <label>MQL Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>