force-app/main/default/objects/Lead/fields/MQL_Conversion__c.field-meta.xml
<CustomField>
    <fullName>MQL_Conversion__c</fullName>
    <description>This property essentially captures the most recent conversion that led to an MQL status</description>
    <label>MQL Conversion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>