force-app/main/default/objects/Lead/fields/MQL_Marketing_group__c.field-meta.xml
<CustomField>
    <fullName>MQL_Marketing_group__c</fullName>
    <description>Conversion information from HS</description>
    <label>MQL Marketing group</label>
    <type>TextArea</type>
</CustomField>