force-app/main/default/objects/Lead/fields/MQL_Source__c.field-meta.xml
<CustomField>
    <fullName>MQL_Source__c</fullName>
    <description>RO-1749</description>
    <label>MQL Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>