force-app/main/default/objects/Lead/fields/MQL_Source_Drill_Down_1__c.field-meta.xml
<CustomField>
    <fullName>MQL_Source_Drill_Down_1__c</fullName>
    <description>RO-1749</description>
    <label>MQL Source Drill Down 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>