force-app/main/default/objects/Lead/fields/Next_Action_Detail__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Detail__c</fullName>
    <description>RO-1150
Extended to 255 characters within RO-1151</description>
    <label>Next Action - Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>