force-app/main/default/objects/Lead/fields/Opted_in_E_Learning_HR_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Opted_in_E_Learning_HR_Knowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for HS Sync</description>
    <label>Opted in: E-Learning &amp; HR Knowledge</label>
    <type>Checkbox</type>
</CustomField>