force-app/main/default/objects/Lead/fields/Opted_in_HeyJobs_Product__c.field-meta.xml
<CustomField>
    <fullName>Opted_in_HeyJobs_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for HS sync</description>
    <label>Opted in: HeyJobs Product</label>
    <type>Checkbox</type>
</CustomField>