force-app/main/default/objects/Lead/fields/Opted_in_Webinars__c.field-meta.xml
<CustomField>
    <fullName>Opted_in_Webinars__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for HS Sync</description>
    <label>Opted in: Webinars</label>
    <type>Checkbox</type>
</CustomField>