force-app/main/default/objects/Lead/fields/Outbound_Source__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Source__c</fullName>
    <label>Outbound Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website Visitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>