force-app/main/default/objects/Lead/fields/OwnerProfile__c.field-meta.xml
<CustomField>
    <fullName>OwnerProfile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerProfile</label>
    <type>Text</type>
</CustomField>