force-app/main/default/objects/Lead/fields/Planned_Hires__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hires__c</fullName>
    <label>Planned Hires</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>1-4</fullName>
            </value>
            <value>
                <fullName>5-9</fullName>
            </value>
            <value>
                <fullName>10-19</fullName>
            </value>
            <value>
                <fullName>10-50</fullName>
            </value>
            <value>
                <fullName>20-49</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100-250</fullName>
            </value>
            <value>
                <fullName>250-500</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>&gt;1000</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>0-10</fullName>
                <isActive>false</isActive>
                <label>0-10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>