force-app/main/default/objects/Lead/fields/plOpenJobs__c.field-meta.xml
<CustomField>
    <fullName>plOpenJobs__c</fullName>
    <label>Open Jobs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-4</fullName>
            </value>
            <value>
                <fullName>5-9</fullName>
            </value>
            <value>
                <fullName>10-19</fullName>
            </value>
            <value>
                <fullName>20-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>100-249</fullName>
            </value>
            <value>
                <fullName>250-499</fullName>
            </value>
            <value>
                <fullName>500-1000</fullName>
            </value>
            <value>
                <fullName>&gt;1000</fullName>
            </value>
            <value>
                <fullName>10-50</fullName>
                <isActive>false</isActive>
                <label>10-50</label>
            </value>
            <value>
                <fullName>&lt;10</fullName>
                <isActive>false</isActive>
                <label>&lt;10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>