force-app/main/default/objects/Lead/fields/Recent_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversion__c</fullName>
    <description>RO-1605</description>
    <inlineHelpText>The last conversion for this Lead recorded by Marketing</inlineHelpText>
    <label>Recent Conversion</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>