force-app/main/default/objects/Lead/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that referred this (potential) customer to us for referral tracking</description>
    <inlineHelpText>Account that referred this (potential) customer to us for referral tracking</inlineHelpText>
    <label>Legacy- Referred By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>