force-app/main/default/objects/Lead/fields/Referred_by_email__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_email__c</fullName>
    <description>E-mail address of referrer</description>
    <label>Legacy- Referred_by_email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>