force-app/main/default/objects/Lead/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <description>Synced from hubspot to show which Sales member onboarded the contact</description>
    <label>Sales Representative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adrian Tekath</fullName>
            </value>
            <value>
                <fullName>Alina Kühne</fullName>
            </value>
            <value>
                <fullName>Andreas Fasser</fullName>
            </value>
            <value>
                <fullName>Angelina Bar</fullName>
            </value>
            <value>
                <fullName>Annalena Wutke</fullName>
            </value>
            <value>
                <fullName>Annika Neumann</fullName>
            </value>
            <value>
                <fullName>Caro Piepenstock</fullName>
            </value>
            <value>
                <fullName>Christina Elsing</fullName>
            </value>
            <value>
                <fullName>Daniel Steinig</fullName>
            </value>
            <value>
                <fullName>Dennis Cyron</fullName>
            </value>
            <value>
                <fullName>Diana Bloß</fullName>
            </value>
            <value>
                <fullName>Ebru Kizilkaya</fullName>
            </value>
            <value>
                <fullName>Floralie Reiff</fullName>
            </value>
            <value>
                <fullName>Georgia Born</fullName>
            </value>
            <value>
                <fullName>Hatice Demirci</fullName>
            </value>
            <value>
                <fullName>Janosch Dietrich</fullName>
            </value>
            <value>
                <fullName>Jasmin Faisst</fullName>
            </value>
            <value>
                <fullName>Jenna Dohanetz</fullName>
            </value>
            <value>
                <fullName>Johanna Kaden</fullName>
            </value>
            <value>
                <fullName>Johannes Niepmann</fullName>
            </value>
            <value>
                <fullName>Julia Chycko</fullName>
            </value>
            <value>
                <fullName>Julian Martin</fullName>
            </value>
            <value>
                <fullName>Justin Hübert</fullName>
            </value>
            <value>
                <fullName>Leon Felzmann</fullName>
            </value>
            <value>
                <fullName>Lisa Secundo</fullName>
            </value>
            <value>
                <fullName>Lucas Lingens</fullName>
            </value>
            <value>
                <fullName>Marcel Roth</fullName>
            </value>
            <value>
                <fullName>Mareike Schliesser</fullName>
            </value>
            <value>
                <fullName>Marika Junker</fullName>
            </value>
            <value>
                <fullName>Marino Dürrschmid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>