force-app/main/default/objects/Lead/fields/Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email__c</fullName>
    <description>If upon lead matching &amp; conversion we identify a second email (e.g. in LeanData), we put it here.</description>
    <inlineHelpText>If upon lead matching &amp; conversion we identify a second email (e.g. in LeanData), we put it here.</inlineHelpText>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>