force-app/main/default/objects/Lead/fields/SSSU_Trigger_initiation__c.field-meta.xml
<CustomField>
    <fullName>SSSU_Trigger_initiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSSU Trigger initiation</label>
    <type>Checkbox</type>
</CustomField>