force-app/main/default/objects/Lead/fields/Timestamp_Became_an_MQL__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Became_an_MQL__c</fullName>
    <label>Timestamp Became an MQL</label>
    <type>Date</type>
</CustomField>