force-app/main/default/objects/Lead/fields/Timestamp_Converted__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Converted__c</fullName>
    <formula>ConvertedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timestamp Converted</label>
    <type>Date</type>
</CustomField>