force-app/main/default/objects/Lead/fields/Timestamp_Latest_MQL_conversion__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Latest_MQL_conversion__c</fullName>
    <description>RO-1700</description>
    <label>Timestamp Latest MQL conversion</label>
    <type>DateTime</type>
</CustomField>