force-app/main/default/objects/Lead/fields/Timestamp_Lost__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Lost__c</fullName>
    <label>Timestamp Lost</label>
    <type>Date</type>
</CustomField>