force-app/main/default/objects/Lead/fields/Timestamp_referral__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_referral__c</fullName>
    <description>Tracking of referrals. Date and time when the lead was created if a Referred_by_ID is populated.</description>
    <formula>IF( 
  ISBLANK( Trigger_Sync_Lead__c ),
  NULL,  
  CreatedDate
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tracking of referrals. Date and time when the lead was created if a Referred_by_ID is populated.</inlineHelpText>
    <label>Legacy- Timestamp Referral</label>
    <type>DateTime</type>
</CustomField>