force-app/main/default/objects/Lead/fields/Timestamp_SSSU_HS_Workflow_completed__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_SSSU_HS_Workflow_completed__c</fullName>
    <description>RO-1559</description>
    <label>Timestamp SSSU HS Workflow completed</label>
    <type>DateTime</type>
</CustomField>