force-app/main/default/objects/Lead/fields/Timestamp_SSSU_lead__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_SSSU_lead__c</fullName>
    <inlineHelpText>This timestamps gets populated when the customer submitted the Self-Service Sign Up Form on our website</inlineHelpText>
    <label>Timestamp SSSU</label>
    <type>Date</type>
</CustomField>