force-app/main/default/objects/Lead/fields/Timestamp_Webinar_Registration__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Webinar_Registration__c</fullName>
    <label>Timestamp Webinar Registration</label>
    <type>DateTime</type>
</CustomField>