force-app/main/default/objects/Lead/fields/Title_Categories__c.field-meta.xml
<CustomField>
    <fullName>Title_Categories__c</fullName>
    <label>Title Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Head of HR</fullName>
            </value>
            <value>
                <fullName>HR General</fullName>
            </value>
            <value>
                <fullName>HR Marketing</fullName>
            </value>
            <value>
                <fullName>HR Trainee</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Geschäftsführung</fullName>
            </value>
            <value>
                <fullName>CHRO/CPeO</fullName>
            </value>
            <value>
                <fullName>C-Level Other</fullName>
            </value>
            <value>
                <fullName>Leadership Recruiting</fullName>
            </value>
            <value>
                <fullName>Leadership HR</fullName>
            </value>
            <value>
                <fullName>Prokurist</fullName>
            </value>
            <value>
                <fullName>Leadership Other</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Other Manager</fullName>
            </value>
            <value>
                <fullName>Other categories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>