force-app/main/default/objects/Lead/fields/Top_5_Pages__c.field-meta.xml
<CustomField>
    <fullName>Top_5_Pages__c</fullName>
    <description>Integration from Albacross</description>
    <label>Top 5 Pages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>