force-app/main/default/objects/Lead/fields/Trigger_Sync_Lead__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Sync_Lead__c</fullName>
    <label>Trigger Sync Lead</label>
    <type>Date</type>
</CustomField>