force-app/main/default/objects/Lead/fields/txtInboundForm__c.field-meta.xml
<CustomField>
    <fullName>txtInboundForm__c</fullName>
    <inlineHelpText>Information that came via the inbound typeform.</inlineHelpText>
    <label>Inbound Form</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>