force-app/main/default/objects/Lead/fields/urlCareerPage__c.field-meta.xml
<CustomField>
    <fullName>urlCareerPage__c</fullName>
    <inlineHelpText>should be filled with the career page URL of the client. Is used afterwards in prospecting to prepare for client meetings</inlineHelpText>
    <label>Career Page</label>
    <type>Url</type>
</CustomField>