force-app/main/default/objects/Lead/fields/Verified_Email__c.field-meta.xml
<CustomField>
    <fullName>Verified_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Verified Email</label>
    <type>Checkbox</type>
</CustomField>