force-app/main/default/objects/Lead/fields/Webinar_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy - Webinar Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>