force-app/main/default/objects/Lead/fields/zp2023_demo_confirmed_date_time__c.field-meta.xml
<CustomField>
    <fullName>zp2023_demo_confirmed_date_time__c</fullName>
    <description>Field to populate demo date and time on the form</description>
    <inlineHelpText>Hubspot Field to populate demo date and time on the form</inlineHelpText>
    <label>zp2023_demo_confirmed_date&amp;time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>