force-app/main/default/objects/Lead/recordTypes/Inbound.recordType-meta.xml
<RecordType>
    <fullName>Inbound</fullName>
    <active>true</active>
    <businessProcess>Inbound Lead Process</businessProcess>
    <description>Inbound Leads from Contact Form, SocialMedia, Direct or Hotline without any qualification</description>
    <label>Inbound</label>
</RecordType>