force-app/main/default/objects/Lead/validationRules/Admin_Loss_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Admin_Loss_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(Status, &quot;Lost&quot;),
ISPICKVAL( Loss_Reason__c, &quot;Admin Only: Lead merged in Hubspot&quot;),
$Profile.Name != &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>The loss reason you have chosen is available only for Admins. Please choose a different loss reason for closing.</errorMessage>
</ValidationRule>