force-app/main/default/objects/Lead/validationRules/Career_Page_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Career_Page_required</fullName>
    <active>true</active>
    <description>Career Page must be filled out before converting!</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Status, &quot;Converted&quot;),
ISBLANK(urlCareerPage__c),
ISBLANK(Timestamp_SSSU_lead__c),
ISPICKVAL(MQL_Type_Lead__c, &apos;&apos;),
ISBLANK(Engagement_Score__c)
)</errorConditionFormula>
    <errorDisplayField>urlCareerPage__c</errorDisplayField>
    <errorMessage>Please enter the Career Page!</errorMessage>
</ValidationRule>